--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             rel="stylesheet">
     </head>
     <body>
-        <!--NavigationBar comes here-->
+        <!--NavigationBar here-->
         <section id="nav-bar">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">LOGO</a>
