--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             rel="stylesheet">
     </head>
     <body>
-        <!--NavigationBar here-->
+        <!--NavigationBar comes here-->
         <section id="nav-bar">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">LOGO</a>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images\XYYM5743.JPG" class="d-block"
+                        <img src="images\FASW6478 new.jpg" class="d-block"
                             alt="...">
                         <div class="carousel-caption">
                             <h3>Locally Produced Rice</h3>
@@ -95,37 +95,35 @@
         </div>
         <!--About Section-->
         <section id="about">
-            <div class="contentbox">
-                <div class="aboutimage">
-                    <div class="contentleft">
-                        <h1 class="aboutheading">— Who We Are</h1>
-                        <p class="aboutparagraph">Dots Group of Companies is a
-                            Pan
-                            African Resources Investment Company incorporated in
-                            Ghana. The company is headquartered in Accra, Ghana,
-                            and
-                            has entered into strategic partnerships with several
-                            entities in furtherance of its objectives.
-                            Dots Group of Companies has four major service
-                            offerings
-                            across these industries: Agribusiness –
-                            agro-processing,
-                            Commodity trading, Logistics and shipping,
-                            Advertising
-                            and Marketing.
-                            <br>
-                            <br>
-                            Dots group of Companies team is distinguished by a
-                            very
-                            strong technical background, as well as effective
-                            operational and financial expertise. These qualities
-                            are
-                            complemented by the combined experience of the team
-                            and
-                            our partners, who continue to focus on delivering
-                            professional and quality experience for our clients.
-                        </p>
-                        <button type="button" class="btn btn-primary">Read More</button>
+
+            <div class="aboutusbox">
+                <div class="aboutusleft">
+                    <h2 class="aboutheader">— Who We Are</h2>
+                    <p class="aboutparagraph">Dots Group of Companies is a Pan
+                        African Resources Investment Company incorporated in
+                        Ghana. The company is headquartered in Accra, Ghana, and
+                        has entered into strategic partnerships with several
+                        entities in furtherance of its objectives.
+                        Dots Group of Companies has four major service offerings
+                        across these industries: Agribusiness – agro-processing,
+                        Commodity trading, Logistics and shipping, Advertising
+                        and Marketing
+                        <br>
+                        <br>
+                        Dots group of Companies team is distinguished by a very
+                        strong technical background, as well as effective
+                        operational and financial expertise. These qualities are
+                        complemented by the combined experience of the team and
+                        our partners, who continue to focus on delivering
+                        professional and quality experience for our clients. The
+                        company pride itself on providing a platform for
+                        continuous development and growth of our team through
+                        exposure to various projects and industries.
+                    </p>
+                </div>
+                <div class="aboutusright">
+                    <div class="aboutimage">
+                        <img src="images\KCXC6790.JPG" alt="">
                     </div>
                 </div>
             </div>
@@ -180,6 +178,63 @@
                     Products
                 </button>
             </section>
+        </section>
+
+        <!--Our Clients-->
+        <section class="clients">
+            <h2 class="heading">— Our Clients</h2>
+            <p class="text">Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit. Quod ex laborum, distinctio, adipisci
+                dolorum, excepturi quasi iure ab eligendi sunt iste voluptas
+                vero molestias vel nam fugit minima id nesciunt.</p>
+            <div class="imagebox">
+                <img src="images\logo-facebook.svg" alt="" height="100px"
+                    width="200px" a href="https://facebook.com">
+                <img
+                    src="images\mobile-solid.svg"
+                    alt="" height="100px" width="200px">
+                <img src="images\logo-twitter.svg" alt="" height="100px"
+                    width="100px">
+            </div>
+        </section>
+        <!--testimonials-->
+        <section class="testimonials">
+            <h2 class="heading">— What Our Clients Say</h2>
+            <div class="container">
+                <div class="contentbox">
+                    <div>
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Voluptate explicabo, sit alias
+                            distinctio dolorum necessitatibus cum sequi est,
+                            quidem maiores molestias quisquam illo nulla
+                            facere voluptas reiciendis laborum? Error,
+                            voluptates.</p>
+                        <h3>Sales Manager, ADB</h3>
+                    </div>
+                </div>
+                <div class="contentbox">
+                    <div>
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Voluptate explicabo, sit alias
+                            distinctio dolorum necessitatibus cum sequi est,
+                            quidem maiores molestias quisquam illo nulla
+                            facere voluptas reiciendis laborum? Error,
+                            voluptates.</p>
+                        <h3>Oil Expert, TOR</h3>
+                    </div>
+                </div>
+                <div class="contentbox">
+                    <div>
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Voluptate explicabo, sit alias
+                            distinctio dolorum necessitatibus cum sequi est,
+                            quidem maiores molestias quisquam illo nulla
+                            facere voluptas reiciendis laborum? Error,
+                            voluptates.</p>
+                        <h3>Consultant, ECG</h3>
+                    </div>
+                </div>
+            </div>
         </section>
         <!--Get In Touch-->
         <section id="contact">
